[package]
name = "lin"
version = "0.0.1"
authors = ["Hawk Weisman <hi@hawkweisman.me>"]
description = "Generic linear algebra (with SIMD)"
license = "MIT"
homepage = "http://hawkweisman.me/lin"
repository = "https://github.com/hawkw/lin"
readme = "README.md"
keywords = ["math","linear","vector"]

[features]
parallel = ["simd"]
unstable = ["parallel"]

[dependencies.simd]
git = "https://github.com/huonw/simd"
optional = true
